# eudaq

./: .gitignore  .travis.yml  CMakeLists.txt  STARTRUN.hgtd  STARTRUN.minimum  appveyor.yml  options_scope_producer
.github/workflows/: main.yml
appveyor/: install_afs.ps1
cmake/: CXX11.cmake  FindPI_GCS_LIB.cmake  Platform.cmake
conf/: ExampleConfig.conf  ExampleInit.init  ni_autotrig.conf  ni_coins.conf
main/include/eudaq/: DataConverterPlugin.hh  PluginManager.hh
main/lib/: CMakeLists.txt
main/lib/plugins/: DataConverterPlugin.cc  USBPixI4ConverterPlugin.cc
main/lib/src/: PluginManager.cc
monitors/onlinemon/: CMakeLists.txt
monitors/onlinemon/include/: SimpleStandardPlane.hh
monitors/onlinemon/src/: HitmapHistos.cc  SimpleStandardPlane.cc  TGraphSet.cc
nreader/include/: EUTelNativeReader.h
nreader/src/: EUTelNativeReader.cc
producers/: CMakeLists.txt
producers/keysightScope/: CMakeLists.txt
producers/keysightScope/include/: KeysightScopeController.hh
producers/keysightScope/misc/: ExampleKeysightScopeConfig.conf
producers/keysightScope/misc/hgtdbcode/: get_allseg.c  get_allseg_BUSYNIM_SPSUSB.c  get_allseg_V1.c  get_allseg_twoScope_SPSUSB.c  get_allseg_twoScope_SPSUSB_v1.c  get_allseg_twoScope_SPSUSB_v2----TEMP_TO_CUT.c  get_allseg_twoScope_SPSUSB_v2.c  get_setup.c  sdd_mmap.c
producers/keysightScope/misc/visa-test/: vistest.cpp
producers/keysightScope/src/: KeysightScopeControl.cxx  KeysightScopeController.cc  KeysightScopeOnTrigger.cxx  KeysightScopeProducer.cc
producers/oscilloscope/: CMakeLists.txt  README.md  optConf.md
producers/oscilloscope/include/: KeysightScopeController.hh
producers/oscilloscope/misc/: ExampleKeysightScopeConfig.conf  ExampleKeysightScopeConfigBusy.conf
producers/oscilloscope/misc/hgtdbcode/: get_allseg_BUSYNIM.c  get_allseg_twoScope_SPSUSB_v2----TEMP_TO_CUT.c  get_allseg_twoScope_SPSUSB_v2_with_busy.c  qs.c  usb_pulse_count.c  with_busy
producers/oscilloscope/misc/hgtdbcode/count_and_veto/: get_allseg_twoScope_SPSUSB_v3.c.c  usb_pulse_count.c
producers/oscilloscope/misc/visa-test/: a.out
producers/oscilloscope/src/: KeysightScopeController.cc  KeysightScopeOnTrigger.cxx  OscilloscopeControl.cxx  OscilloscopeProducer.cc
producers/pi/: CMakeLists.txt  hexa_grid.ipynb
producers/pi/etc/: PIConfig_Hexa.conf  hexa_grid.ipynb
producers/pi/include/: HexGrid.h  PIWrapper.h
producers/pi/src/: HexGrid.cc  HexaPos.cc  PIControl.cxx  PIController.cxx  PIWrapper.cc  test_hexapos.cxx  test_hexgrid.cxx
user/: CMakeLists.txt
user/eudet/: CMakeLists.txt
user/eudet/hardware/: CMakeLists.txt
user/stcontrol/module/src/: UsbpixGen3NameRawEvent2StdEventConverter.cc
user/yarr/module/src/: YarrRawEvent2StdEventConverter.cc
